# Diplom_board

./: .dockerignore  .env.sample  Dockerfile  README.md  advertisement_fixture.json  category_fixture.json  comment_fixture.json  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  users_fixture.json
.pg_data/: postmaster.pid
.pg_data/base/1/: 2619  2696  2840  2841  pg_internal.init
.pg_data/base/5/: pg_internal.init
.pg_data/global/: 1260  1262  2671  pg_control  pg_internal.init
.pg_data/pg_stat/: pgstat.stat
board/: admin.py  filters.py  forms.py  models.py  pagination.py  paginators.py  serializers.py  urls.py  views.py
board/migrations/: 0001_initial.py  0002_initial.py  0003_category_created_at.py  0004_alter_comment_options_and_more.py  0005_alter_advertisement_price.py  0006_alter_advertisement_price.py  0007_alter_advertisement_price_and_more.py  0008_remove_advertisement_board_advertisement_price_check.py  0009_fix_price_values.py  0010_alter_advertisement_category.py  0011_rename_ad_comment_advertisement.py  0012_alter_advertisement_owner.py  0013_alter_advertisement_created_at.py
board/tests/: conftest.py  test_ad.py  test_comment.py
board/validators/: forbidden_words.txt  validators.py
config/: celery.py  settings.py  urls.py
users/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: create_user.py  csu.py
users/migrations/: 0001_initial.py  0002_user_token_alter_user_image.py
users/templates/: base.html
users/tests/: conftest.py  test_user.py
(+6 files in other folders)
