[tool.poetry]
name = "diplom-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dotenv = "^0.9.9"
django = "^5.2.3"
drf-yasg = "^1.21.10"
django-rest-passwordreset = "^1.5.0"
validators = "^0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
